<resources>
    <string name="app_name">MIBDropbox2</string>
    <!-- Strings related to login -->
    <string name="prompt_login_username">Enter user name</string>
    <string name="prompt_login_password">Enter password</string>
    <string name="action_login">Login</string>
    <string name="action_login_short">Sign in</string>
    <string name="action_login_to_register">Register</string>
    <string name="prompt_register_name">Enter your name</string>
    <string name="prompt_register_username">Enter user name</string>
    <string name="prompt_register_email">Enter your email</string>
    <string name="prompt_register_password">Enter password</string>
    <string name="prompt_register_confirm_password">Confirm password</string>
    <string name="action_register_to_login">Register</string>
    <string name="action_retrieve_to_dropbox">Retrieve Mail-In Ballots from Dropbox</string>
    <string name="action_transfer_to_office">Transfer Mail-In Ballots to Main Office</string>
    <string name="db_title_txt">Drop Box Location:</string>
    <string name="db_location_name_hint">{dropbox location name}</string>
    <string name="db_location_addr_hint">{dropbox location address}</string>
    <string name="db_employee_initials_txt">Employee Initials:</string>
    <string name="prompt_db_initials_hint">initials</string>
    <string name="db_mib_btn">Mail-In Ballot Drop Box</string>
    <string name="db_ballot_bin_btn">Ballot Bin(s) containing Mail-In Ballots</string>
    <string name="db_staff_sig1_btn">Staff Signature 1</string>
    <string name="db_staff_sig2_btn">Staff Signature 2</string>
    <string name="db_submit_btn">Submit</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>