<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dropbox_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Retrieve">

    <TextView
        android:id="@+id/db_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_title_txt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/db_location_name_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/db_location_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_location_name_hint"
        app:layout_constraintBottom_toTopOf="@+id/db_location_address_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/db_title_view" />

    <TextView
        android:id="@+id/db_location_address_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/db_location_addr_hint"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="103dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="145dp" />

    <EditText
        android:id="@+id/db_employee_initials_view"
        android:layout_width="93dp"
        android:layout_height="52dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/prompt_db_initials_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="122dp" />

    <Button
        android:id="@+id/db_mib_dropbox_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_mib_btn"
        app:layout_constraintBottom_toTopOf="@+id/db_ballot_bin_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/db_employee_initials_view" />

    <Button
        android:id="@+id/db_ballot_bin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_ballot_bin_btn"
        app:layout_constraintBottom_toTopOf="@+id/db_staff_sig1_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/db_mib_dropbox_btn" />

    <Button
        android:id="@+id/db_staff_sig1_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_staff_sig1_btn"
        app:layout_constraintBottom_toTopOf="@+id/db_staff_sig2_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/db_ballot_bin_btn" />

    <Button
        android:id="@+id/db_staff_sig2_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_staff_sig2_btn"
        app:layout_constraintBottom_toTopOf="@+id/db_submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/db_staff_sig1_btn" />

    <Button
        android:id="@+id/db_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_submit_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/db_staff_sig2_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>